--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,6 @@
       step="1"
     />
     <script src="https://js.arcgis.com/4.28/"></script>
-    <script type="module" src="./script.ts"></script>
+    <script type="module" src="./script-square.ts"></script>
   </body>
 </html>
