Add cube to SceneViewer

--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,8 @@
     />
   </head>
   <body>
-    <!-- <div id="viewDiv"></div> -->
-    <canvas class="webgl"></canvas>
+    <div id="viewDiv"></div>
+    <!-- <canvas class="webgl"></canvas>
     <input
       type="range"
       id="angleSlider"
@@ -20,8 +20,8 @@
       max="360"
       value="0"
       step="1"
-    />
+    /> -->
     <script src="https://js.arcgis.com/4.28/"></script>
-    <script type="module" src="./script-box.ts"></script>
+    <script type="module" src="./script-arcgis-box.ts"></script>
   </body>
 </html>
