add view model projection matrices to the cube example

--- a/src/index.html
+++ b/src/index.html
@@ -11,17 +11,9 @@
     />
   </head>
   <body>
-    <div id="viewDiv"></div>
-    <!-- <canvas class="webgl"></canvas>
-    <input
-      type="range"
-      id="angleSlider"
-      min="-360"
-      max="360"
-      value="0"
-      step="1"
-    /> -->
+    <!-- <div id="viewDiv"></div> -->
+    <canvas class="webgl"></canvas>
     <script src="https://js.arcgis.com/4.28/"></script>
-    <script type="module" src="./script-arcgis-box.ts"></script>
+    <script type="module" src="./script-box.ts"></script>
   </body>
 </html>
