--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,6 @@
     <!-- <div id="viewDiv"></div> -->
     <canvas class="webgl"></canvas>
     <script src="https://js.arcgis.com/4.28/"></script>
-    <script type="module" src="./script-box.ts"></script>
+    <script type="module" src="./script-boxes.ts"></script>
   </body>
 </html>
