--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,9 @@
     />
   </head>
   <body>
-    <!-- <div id="viewDiv"></div> -->
-    <canvas class="webgl"></canvas>
+    <div id="viewDiv"></div>
+    <!-- <canvas class="webgl"></canvas> -->
     <script src="https://js.arcgis.com/4.28/"></script>
-    <script type="module" src="./script-boxes.ts"></script>
+    <script type="module" src="./script-arcgis-box.ts"></script>
   </body>
 </html>
