Add exercise 8 - render a simple cube

--- a/src/index.html
+++ b/src/index.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="./style.css" />
     <link
       rel="stylesheet"
-      href="https://js.arcgis.com/4.28/esri/themes/light/main.css"
+      href="https://js.arcgis.com/4.29/esri/themes/light/main.css"
     />
   </head>
   <body>
     <!-- <div id="viewDiv"></div> -->
     <canvas class="webgl"></canvas>
-    <script src="https://js.arcgis.com/4.28/"></script>
-    <script type="module" src="./07-square.ts"></script>
+    <script src="https://js.arcgis.com/4.29/"></script>
+    <script type="module" src="./08-cube.ts"></script>
   </body>
 </html>
