--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
   <body>
     <div id="viewDiv"></div>
     <!-- <canvas class="webgl"></canvas> -->
-    <script src="https://js.arcgis.com/4.29/"></script>
-    <script type="module" src="./09-arcgis-cube.ts"></script>
+    <script type="module" src="./10-arcgis-multiple-cubes.ts"></script>
+    <!-- <script type="module" src="./09-arcgis-cube.ts"></script> -->
   </body>
 </html>
