--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,8 @@
   <body>
     <div id="viewDiv"></div>
     <!-- <canvas class="webgl"></canvas> -->
-    <script type="module" src="./12-arcgis-arc-lines.ts"></script>
+    <script type="module" src="./13-arcgis-threejs-cube.ts"></script>
+    <!-- <script type="module" src="./12-arcgis-arc-lines.ts"></script> -->
     <!-- <script type="module" src="./11-arcgis-lines.ts"></script> -->
     <!-- <script type="module" src="./09-arcgis-cube.ts"></script> -->
   </body>
